[package]
name = "assert"
version = "0.5.0"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/stainless-steel/assert"
homepage = "https://github.com/stainless-steel/assert"
documentation = "https://stainless-steel.github.io/assert"
description = "The package provides assertions for testing."
